UI update to follow tiket design. Disable Previous/Next month outside limit. Single and range coloring update. Single date selector for pre-selected dates. Pricing field support. Code refactoring to make align with existing calendar ui. Remove unwanted extra features.

--- a/cosmocalendar/src/main/res/layout/view_month.xml
+++ b/cosmocalendar/src/main/res/layout/view_month.xml
@@ -9,6 +9,7 @@
         android:id="@+id/ll_month_header"
         android:layout_width="match_parent"
         android:layout_height="48dp"
+        android:gravity="center"
         android:orientation="horizontal">
 
         <View
@@ -19,15 +20,14 @@
             android:layout_marginLeft="@dimen/space_1x"
             android:layout_marginRight="@dimen/space_1x"
             android:layout_weight="1"
-            android:background="@color/default_border_color" />
+            android:background="@color/default_border_color"
+            android:visibility="gone" />
 
         <TextView
             android:id="@+id/tv_month_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:letterSpacing="0.1"
-            android:textAllCaps="true"
             android:textSize="@dimen/text_big"
             tools:text="April 2015" />
 
@@ -39,7 +39,8 @@
             android:layout_marginLeft="@dimen/space_1x"
             android:layout_marginRight="@dimen/space_1x"
             android:layout_weight="1"
-            android:background="@color/default_border_color" />
+            android:background="@color/default_border_color"
+            android:visibility="gone" />
 
     </LinearLayout>
 
