--- a/cosmocalendar/src/main/res/layout/view_day.xml
+++ b/cosmocalendar/src/main/res/layout/view_day.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -14,5 +15,14 @@
         android:textColor="@color/default_day_text_color"
         android:textSize="@dimen/day_text_size"
         tools:text="10" />
+
+    <TextView
+        android:id="@+id/tv_day_price"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center"
+        android:text="2400"
+        android:textColor="@color/default_other_day_text_color"
+        android:textSize="10sp" />
 
 </FrameLayout>
