--- a/cosmocalendar/src/main/res/values/colors.xml
+++ b/cosmocalendar/src/main/res/values/colors.xml
@@ -8,16 +8,27 @@
     <color name="default_month_text_color">#595f66</color>
     <color name="default_other_day_text_color">#c9cacd</color>
     <color name="default_day_text_color">#4a4a4a</color>
-    <color name="default_weekend_day_text_color">#00cf78</color>
+    <color name="default_weekend_day_text_color">#f00</color>
     <color name="default_week_day_title_text_color">#91959b</color>
-    <color name="default_selected_day_text_color">@android:color/white</color>
-    <color name="default_selected_day_background_color">#33d993</color>
-    <color name="default_selected_day_background_start_color">#00cf7d</color>
-    <color name="default_selected_day_background_end_color">#00a564</color>
-    <color name="default_connected_day_text_color">#f00</color>
-    <color name="default_connected_day_selected_text_color">#f00</color>
+
+    <color name="default_selected_day_text_color">#595f66</color>
+    <color name="default_selected_day_background_color">#fedd00</color>
+    <color name="default_selected_day_background_start_color">#fedd00</color>
+    <color name="default_selected_day_background_end_color">#fedd00</color>
+    <color name="default_selected_day_background_range_color">#44fedd00</color>
+
+    <color name="default_connected_day_text_color">#595f66</color>
+    <color name="default_connected_day_selected_text_color">#595f66</color>
+
     <color name="default_disabled_day_text_color">#c9cacd</color>
     <color name="default_border_color">#ececec</color>
     <color name="default_selection_bar_month_title_text_color">#c9cacd</color>
+
+    <!--Unused-->
+    <color name="yellow_1">#fedd00</color>
+    <color name="orange">#FF8000</color>
+
+    <!--Tiket-->
+    <color name="primary_blue">#0064D2</color>
 
 </resources>
